Story/ccls 2180 case submission (#120)
* story(ccls-2180): add case submission

* story(ccls-2180): unit testing

* Add api specification

* updated test coverage

* Update soa-gateway-api/open-api-specification.yml

Co-authored-by: farrell-m <168534673+farrell-m@users.noreply.github.com>

* PR Amendments

---------

Co-authored-by: Andrew Porritt <109674546+porritta@users.noreply.github.com>
Co-authored-by: farrell-m <168534673+farrell-m@users.noreply.github.com>